<resources>
    <string name="app_name">Snap by Gesture</string>
    <string name="title_capture">Capture</string>
    <string name="title_gallery">Gallery</string>
    <string name="title_guide">Guide</string>

    <string name="all_text">All</string>
    <string name="none_text">None</string>
    <string name="closed_fist_text">Closed fist</string>
    <string name="open_palm_text">Open palm</string>
    <string name="pointing_up_text">Pointing up</string>
    <string name="thumb_up_text">Thumb up</string>
    <string name="thumb_down_text">Thumb down</string>
    <string name="victory_text">Victory</string>
    <string name="love_text">Love</string>

    <string name="permission_dialog_title">The app requires the following permissions</string>
    <string name="camera_permission_text">Camera permissions</string>
    <string name="camera_permission_dialog_description">We will apply for camera permission for taking pictures</string>
    <string name="storage_permission_text">Storage permissions</string>
    <string name="storage_permission_dialog_description">We will request storage permission to save the photos you took</string>

    <string name="cancel_text">Cancel</string>
    <string name="apply_text">Apply</string>

    <string name="click_turn_on_camera_permissions">Click Turn on camera permissions</string>

    <string name="tip_text">Tip:</string>
    <string name="camera_permission_tip">You have permanently denied the application Camera permissions. Please go to your phone\'s settings to authorize it manually.</string>
    <string name="storage_permission_tip">You have permanently denied the application Storage permissions. Please go to your phone\'s settings to authorize it manually.</string>

    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="select">Select</string>

    <string name="photo">Photo</string>
    <string name="photos">Photos</string>

    <string name="select_items">Select Items</string>
    <string name="selected">Selected</string>
    <string name="camera">Camera</string>

    <string name="photo_deletion_dialog_title">Confirm Delete</string>
    <string name="photo_deletion_dialog_text_content">The photos will be completely deleted from the device. Are you sure you want to delete it?</string>

    <string name="no_camera_available_warning">No camera is available now</string>
    <string name="no_camera_available_detailed_description">Please ensure that your device\'s cameras are functioning properly</string>
    <string name="one_camera_available_warning">Your device has one camera only</string>

    <string name="no_photos">No photos</string>

    <string name="details">Details</string>
    <string name="name">Name</string>
    <string name="time">Time</string>
    <string name="resolution">Resolution</string>
    <string name="size">Size</string>
    <string name="path">Path</string>
    <string name="this_action_may_contain_advertising">This action may contain advertising</string>
    <string name="loading">Loading</string>
    <string name="take_a_photo">Take a photo</string>
    <string name="my_photo">My photo</string>
    <string name="setting">Setting</string>
    <string name="delete_media_failed">Delete media failed</string>
</resources>