<?xml version="1.0" encoding="utf-8"?>
<layout>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="centerCrop"
            android:src="@drawable/bg_splash" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_60sdp"
            android:orientation="vertical"
            app:layout_constraintBottom_toTopOf="@id/tv_progress"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <com.google.android.material.card.MaterialCardView
                android:layout_width="@dimen/_114sdp"
                android:layout_height="@dimen/_114sdp"
                android:layout_gravity="center"
                app:cardBackgroundColor="#2A2E38"
                app:strokeColor="#6FE7E7"
                app:cardCornerRadius="@dimen/_23sdp"
                app:cardElevation="0dp"
                app:strokeWidth="4dp">

                <ImageView
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:src="@drawable/img_logo" />
            </com.google.android.material.card.MaterialCardView>

            <com.gesturesnap.ai.camera.ui.customview.GradientStrokeTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginHorizontal="@dimen/_20sdp"
                android:layout_marginTop="@dimen/_13sdp"
                android:fontFamily="@font/fugazone_regular"
                android:gravity="center"
                android:text="@string/app_name"
                android:textColor="@color/white"
                android:textSize="@dimen/_27ssp"
                app:centerColor="#8e5bfa"
                app:endColor="#aa28e5"
                app:glowColor="@color/white"
                app:glowRadius="@dimen/_4sdp"
                app:startColor="#02c2ff"
                app:strokeWidth="@dimen/_2sdp"/>
        </LinearLayout>

        <TextView
            android:id="@+id/tv_progress"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/_10sdp"
            android:fontFamily="@font/fugazone_regular"
            android:gravity="center"
            android:text="@string/loading"
            android:textColor="@color/white"
            android:textSize="@dimen/_12ssp"
            app:layout_constraintBottom_toTopOf="@id/progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.ProgressBar.Horizontal"
            android:layout_width="0dp"
            android:layout_height="4dp"
            android:layout_marginHorizontal="70dp"
            android:layout_marginBottom="16dp"
            android:progressDrawable="@drawable/progress_gradient"
            app:layout_constraintBottom_toTopOf="@id/tv_splash"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_splash"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:fontFamily="@font/fugazone_regular"
            android:gravity="center"
            android:text="@string/this_action_may_contain_advertising"
            android:textColor="@color/white"
            android:textSize="@dimen/_10ssp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>
