<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:app="http://schemas.android.com/apk/res-auto">
    <data>
        <variable
            name="screenRotationValue"
            type="java.lang.Integer" />
        <variable
            name="icon"
            type="android.graphics.drawable.Drawable" />
        <variable
            name="permissionLabel"
            type="java.lang.String" />
        <variable
            name="description"
            type="java.lang.String" />
        <variable
            name="onClickApplyButton"
            type="android.view.View.OnClickListener" />
        <variable
            name="onClickCancelButton"
            type="android.view.View.OnClickListener" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusable="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:rotation="@{screenRotationValue}"
            android:layout_margin="20dp"
            android:background="@drawable/rounded_rect"
            android:paddingTop="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingBottom="5dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent">

            <TextView
                android:id="@+id/title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/permission_dialog_title"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <ImageView
                android:id="@+id/icon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@{icon}"
                android:layout_marginTop="15dp"
                android:layout_marginStart="15dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@{permissionLabel}"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_semibold"
                android:textSize="14sp"
                android:layout_marginTop="18dp"
                android:layout_marginStart="10dp"
                app:layout_constraintLeft_toRightOf="@id/icon"
                app:layout_constraintTop_toBottomOf="@id/title" />

            <TextView
                android:id="@+id/description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:fontFamily="@font/poppins_regular"
                android:textSize="12sp"
                android:text="@{description}"
                android:layout_marginTop="10dp"
                android:layout_marginHorizontal="15dp"
                app:layout_constraintTop_toBottomOf="@id/icon" />

            <Button
                android:id="@+id/apply_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/apply_text"
                android:background="@color/transparent"
                android:textColor="@color/turquoise"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:textAllCaps="false"
                android:onClick="@{onClickApplyButton}"
                android:layout_marginTop="10dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintRight_toRightOf="parent"/>

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/cancel_text"
                android:background="@color/transparent"
                android:textColor="@color/black"
                android:textSize="14sp"
                android:fontFamily="@font/poppins_medium"
                android:textAllCaps="false"
                android:onClick="@{onClickCancelButton}"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                app:layout_constraintTop_toBottomOf="@id/description"
                app:layout_constraintRight_toLeftOf="@id/apply_button"/>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>